[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://src/scenes/SaveStreakModal.gd" id=1]
[ext_resource type="Script" path="res://src/ui/GlassPanel.gd" id=2]
[ext_resource type="Theme" path="res://src/ui/UiTheme.tres" id=3]
[ext_resource type="Script" path="res://src/ui/LiquidGlassButton.gd" id=4]

[node name="SaveStreakModal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
theme = ExtResource( 3 )

[node name="Dim" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.4)

[node name="Panel" type="ColorRect" parent="."]
script = ExtResource( 2 )
anchor_left = 0.1
anchor_top = 0.28
anchor_right = 0.9
anchor_bottom = 0.72
color = Color(0.03, 0.07, 0.15, 0.68)

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
alignment = 1
theme_override_constants/separation = 18

[node name="Title" type="Label" parent="Panel/VBox"]
text = "Save Your Streak"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 46

[node name="Status" type="Label" parent="Panel/VBox"]
text = "Watch a short ad to save"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="SaveButton" type="Button" parent="Panel/VBox"]
script = ExtResource( 4 )
text = "Watch Ad"
custom_minimum_size = Vector2(0, 102)

[node name="Close" type="Button" parent="Panel/VBox"]
script = ExtResource( 4 )
text = "Not Now"
custom_minimum_size = Vector2(0, 102)

[connection signal="pressed" from="Panel/VBox/SaveButton" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Panel/VBox/Close" to="." method="_on_close_pressed"]
